2003-05-19 Arafat Medini <lumina@silverpen.de>

	* ar.po: Added ar to ALL_LINGUAS

2003-05-17  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added cy to ALL_LINGUAS

2003-05-05  Matthias Clasen  <maclas@gmx.de>

	* glib/gstrfuncs.c (g_ascii_dtostr): 
	(g_ascii_formatd): 
	(g_ascii_strtod): Some doc fixes.  (#111805)

2003-05-05  Christian Rose  <menthos@menthos.com>

	* configure.in: Added sr and sr@Latn to ALL_LINGUAS.

Thu Apr 24 19:12:05 2003  Owen Taylor  <otaylor@redhat.com>

	* autogen.sh (have_libtool): Accept libtool-1.5. (#111483)

2003-04-09  Matthias Clasen  <maclas@gmx.de>

	* INSTALL: 
	* INSTALL.in: Remove list of configuration flags, since these 
	are already documented in docs/reference/glib/building.sgml.

2003-04-08  Matthias Clasen  <maclas@gmx.de>

	* INSTALL: Move Cross-compliation information to reference manual.

Mon Apr  7 13:40:28 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c (g_main_loop_run): When waiting for
	the main loop to be freed up, wait on either
	!loop->is_running or got_ownership, not both.
	(Caused gtk_dialog_run() not to work in other
	threads, reported by Jean-Yves Lefort)

2003-04-07  Matthias Clasen  <maclas@gmx.de>

	* glib/gutf8.c (g_utf8_strlen): Warn if p == NULL && max != 0.
	(#110087) 

2003-04-01  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add g_string_chunk_insert_len.

2003-04-01  Matthias Clasen  <maclas@gmx.de>

	* glib/gstring.[hc] (g_string_chunk_insert_len): New function, to
	insert possible non-nul-terminated byte sequences into a string
	chunk.  (#96279)
	(g_string_chunk_insert): Implement in terms of
	g_string_chunk_insert_len() now.

2003-03-30  Matthias Clasen  <maclas@gmx.de>

	* glib/gstring.c (g_string_new): Optimize the common cases 
	(init == NULL or init == "") a bit.
	* glib/gmarkup.c, glib/gmessages.c, glib/gscanner.c,
	glib/gshell.c, glib/gspawn-win32-helper.c, glib/gspawn-win32.c,
	glib/gspawn.c, gobject/gvaluetransform.c: replace uses of 